SOS-1861 Fixing General Styling and Spacing Issues in Documents Portlet

--- a/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
+++ b/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
@@ -986,265 +986,65 @@ div#navigation {
 /* ---------- Document library ---------- */
 
 .portlet-document-library {
-	.lfr-app-column-view {
-		.results-row td {
-			background: none;
-		}
+        .lfr-app-column-view {
+                background: #F5F5F5;
+                border-bottom: 1px solid #DDD;
 
-		.results-row.selected td {
-			background: #00A2EA;
-		}
+                .navigation-pane .nav {
+                        background: none;
+                        border: 0;
+                        padding: 0 15px;
 
-		.results-row.hover td {
-			background-color: #D3E8F1;
-		}
-	}
+                        .app-view-navigation-entry .overlay.entry-action .btn {
+                                padding: 15px 10px 5px;
+                        }
 
-	.lfr-app-column-view, .lfr-app-column-view .results-row td, .lfr-document-library-comments.lfr-panel.lfr-extended, .portlet-msg, .portlet-msg-alert, .portlet-msg-error, .portlet-msg-info, .portlet-msg-success, .search-button-container, .search-button-container .aui-column:before, .search-button-container .aui-column-content, .search-button-container .aui-column-content-center {
-		border-width: 0;
-	}
+                        li > a {
+                                border-top: 1px solid #FFF;
+                                border-bottom: 1px solid #CCC;
+                                padding: 0.70em 15px;
 
-	.aui-field-wrapper-content, .breadcrumbs-horizontal, .portlet-msg, .lfr-message-info, .portlet-msg-alert, .portlet-msg-error, .portlet-msg-info, .portlet-msg-success, .search-button-container .aui-button, .search-button-container .lfr-search-combobox-item {
-		margin: 0;
-	}
+                                :first-child {
+                                        border-top: 0;
+                                }
+                        }
 
-	.document-library-breadcrumb {
-		background: #FFF;
-		border-bottom-width: 0;
-	}
+                        li.active > a {
+                                border-color: #0af;
+                        }
+                }
 
-	.breadcrumbs-horizontal {
-		margin-top: -1px;
-	}
+                .context-pane {
+                        background: #FFF;
+                        border-left: 1px solid #DDD;
+                        min-height: 500px;
 
-	.breadcrumbs .last {
-		background-image: none;
-	}
+                        .lfr-header-row-content {
+                                padding: 0;
 
-	.document-container {
-		min-height: 400px;
-	}
+                                .select-all-entries {
+                                        left: 10px;
+                                        top: 13px;
+                                }
+                        }
 
-	.lfr-header-row-content {
-		height: 28px;
-		padding: 4px;
-	}
+                        .navbar {
+                                margin-bottom: 0;
 
-	.lfr-search-combobox {
-		margin: 0 0 0 4px;
+                                .navbar-inner {
+                                        background: $controlBgColor;
 
-		.aui-w30, .aui-w70 {
-			padding: 2px 0;
-			width: auto;
-		}
+                                        li.dropdown > a {
+                                                margin-top: 5px;
+                                        }
+                                }
+                        }
+                }
+        }
 
-		.aui-button-input {
-			border-left-width: 0;
-		}
-	}
-
-	.select-documents {
-		@include default-border;
-
-		.aui-field-element {
-			border-width: 0;
-			padding: 6px;
-		}
-	}
-
-	.aui-buttonitem-icon-only {
-		padding: 4px;
-	}
-
-	.aui-w65 {
-		width: 70%;
-	}
-
-	.aui-w35 {
-		width: 30%;
-	}
-
-	.edit-permissions .header-title {
-		display: block;
-	}
-
-	.aui-fieldset-content, .lfr-dynamic-uploader {
-		padding: 10px;
-	}
-
-	.document-container {
-		overflow: hidden;
-
-		.aui-searchcontainer-content {
-			border-width: 0;
-			margin: 0 -1px;
-		}
-
-		.lfr-actions {
-			&, .lfr-trigger, &.aui-state-active .lfr-trigger {
-				background: transparent none;
-				border-width: 0;
-
-				@include box-shadow(none);
-			}
-
-			.lfr-trigger strong {
-				min-width: 0;
-				width: auto;
-			}
-		}
-
-		table .lfr-actions {
-			.lfr-trigger strong {
-				min-width: 0;
-				width: auto;
-			}
-
-			&.show-arrow.direction-down .lfr-trigger strong a {
-				background-position: 100% -3px;
-				padding: 2px 10px;
-			}
-		}
-	}
-}
-
-.portlet-document-library-display {
-	zoom: 1;
-
-	.top-links-container {
-		margin: 0;
-	}
-
-	.asset-column-details-content {
-		border-width: 0;
-	}
-
-	.lfr-asset-column-content {
-		margin-right: 0;
-
-		.lfr-panel {
-			margin-bottom: 0;
-		}
-	}
-
-	.lfr-asset-metadata .lfr-forms-field-wrapper {
-		border-bottom: 1px solid $defaultBorderColor;
-		line-height: 1.5em;
-		padding: 0.75em 0;
-	}
-
-	.lfr-panel-content {
-		padding: 0;
-	}
-}
-
-.portlet-document-library, .portlet-document-library-display {
-	.folder {
-		margin-top: 0;
-	}
-
-	.header-title {
-		display: none;
-	}
-
-	.taglib-header {
-		border-bottom-width: 0;
-		position: relative;
-	}
-
-	.header-back-to {
-		position: absolute;
-		right: 0;
-		top: 0;
-		z-index: 1;
-	}
-
-	.document-info {
-		background-color: $controlBgColor;
-	}
-
-	.aui-column-content-first, .aui-column-content-last, .document-library-breadcrumb, .search-button-container .aui-column:before, .search-button-container .aui-column-content, .search-button-container .aui-column-content-center {
-		padding: 0;
-	}
-
-	.lfr-header-row {
-		background: $controlBgColor;
-		min-height: 33px;
-
-		.parent-folder-title {
-			color: $defaultTextColor;
-		}
-	}
-
-	.lfr-header-row, .document-info {
-		border-bottom: 1px solid $defaultBorderColor;
-	}
-
-	.lfr-header-row-content .parent-folder-title {
-		text-shadow: none;
-	}
-
-	.view {
-		.aui-column-content {
-			border: solid $defaultBorderColor;
-			border-width: 0 1px;
-			margin-left: -1px;
-		}
-
-		.aui-column-first .aui-column-content {
-			border-left-width: 0;
-			margin-left: 0;
-		}
-
-		.aui-column-last .aui-column-content {
-			border-right-width: 0;
-		}
-	}
-
-	.context-pane .context-pane-content {
-		border-left-width: 0;
-		margin-right: -1px;
-	}
-
-	.taglib-ratings.stars .aui-rating-content, .taglib-ratings.stars .liferay-rating-score {
-		min-width: 200px;
-	}
-
-	.document-container table.taglib-search-iterator {
-		table-layout: auto;
-	}
-
-	.version-history .results-grid .lfr-actions .lfr-trigger strong {
-		min-width: 16px;
-	}
-
-	.document-display-style.display-icon {
-		margin: 0 0 5px 5px;
-		width: 195px;
-	}
-}
-
-.rtl .portlet-document-library {
-	.aui-column-last {
-		margin-right: 0;
-
-		.toolbar .aui-toolbar-content {
-			direction: ltr;
-		}
-
-		.search-button-container .aui-column {
-			padding: 2px 0 0 3px;
-			width: auto;
-		}
-
-		.context-pane-content {
-			margin-right: 0;
-		}
-	}
-
-	.aui-column-content-first {
-		border-right-width: 0;
-	}
+        .document-entries-pagination, .portlet-document-library-display .document-entries-pagination {
+                padding: 20px 0 0;
+        }
 }
 
 /* ---------- Microblogs portlet ---------- */
